tests/baselines/reference/classWithPredefinedTypesAsNames.errors.txt
classWithPredefinedTypesAsNames.ts(3,7): error TS2414: Class name cannot be 'any'.
classWithPredefinedTypesAsNames.ts(4,7): error TS2414: Class name cannot be 'number'.
classWithPredefinedTypesAsNames.ts(5,7): error TS2414: Class name cannot be 'boolean'.
classWithPredefinedTypesAsNames.ts(6,7): error TS2414: Class name cannot be 'string'.


==== classWithPredefinedTypesAsNames.ts (4 errors) ====
    // classes cannot use predefined types as names
    
    class any { }
          ~~~
!!! error TS2414: Class name cannot be 'any'.
    class number { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'number'.
    class boolean { }
          ~~~~~~~
!!! error TS2414: Class name cannot be 'boolean'.
    class string { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'string'.